--- a/src/app/arrow-persona/arrow-persona.component.html
+++ b/src/app/arrow-persona/arrow-persona.component.html
@@ -1,1 +1,16 @@
-<div class="arrow" id='chevron'></div>
+<!-- generate arrow-component -->
+<div class="arrow-container">
+    <!-- Not hovered state -->
+    <div class="arrow">
+        <p>Arrow<p>
+        <p>Arrow subtext<p>
+    </div>
+  
+    <!-- Hovered state -->
+    <div class="arrow hovered">
+        <p>Arrow hovered<p>
+        <p>Extra info<p>
+        <button class="arrow-button">more information</button>
+    </div>
+</div>
+   
