--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 <p> Detail pagina component </p>
 <app-detail-persona></app-detail-persona> -->
 
-<p> Persona pijl component </p>
+<!-- Persona pijl component -->
+<app-arrow-persona></app-arrow-persona>
 <app-arrow-persona></app-arrow-persona>
 
 <router-outlet></router-outlet>
