--- a/src/app/arrow-persona/arrow-persona.component.css
+++ b/src/app/arrow-persona/arrow-persona.component.css
@@ -63,6 +63,13 @@
   animation-duration: 0.5s;
 }
 
+.arrow.hovered p {
+  -webkit-animation: appearance 1s; /* Safari 4+ */
+  -moz-animation:    appearance 1s; /* Fx 5+ */
+  -o-animation:      appearance 1s; /* Opera 12+ */
+  animation:         appearance 1s;
+}
+
 .arrow.hovered:hover {
   display: block;
 }
@@ -71,8 +78,25 @@
   display: block;
 }
 
-/* The animation */
+/* The animations */
 @keyframes scrollingDown {
   0%   {height: 0px;}
   100% {height: 115px;}
+}
+
+@-webkit-keyframes appearance {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@-moz-keyframes appearance {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@-o-keyframes appearance {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
+}
+@keyframes appearance {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
 }
