feat(arrow-component): make component responsive to mobile

--- a/src/app/arrow-persona/arrow-persona.component.html
+++ b/src/app/arrow-persona/arrow-persona.component.html
@@ -2,15 +2,18 @@
 <div class="arrow-container">
     <!-- Not hovered state -->
     <div class="arrow">
-        <p>Arrow<p>
-        <p>Arrow subtext<p>
+        <h1>Titel</h1>
+        <p>subtext</p>
+        <p>subtext</p>
     </div>
   
     <!-- Hovered state -->
     <div class="arrow hovered">
-        <p>Arrow hovered<p>
-        <p>Extra info<p>
-        <button class="arrow-button">more information</button>
+        <div class="arrow-hovered-content">
+            <p>Arrow hovered<p>
+            <p>Extra info<p>
+            <button class="arrow-button">more information</button>
+        </div>  
     </div>
 </div>
    
