--- a/src/app/arrow-persona/arrow-persona.component.css
+++ b/src/app/arrow-persona/arrow-persona.component.css
@@ -4,7 +4,7 @@
   text-align: center;
   padding: 12px;
   margin-bottom: 15px;
-  height: 60px;
+  height: 75px;
   width: 100%;
 }
 
@@ -42,10 +42,15 @@
   z-index:-1;
 }
 
-/* Paragraph in Arrow */
 .arrow p {
   color: white;
   font-family: Georgia, serif;
+  margin: 0px;
+}
+
+.arrow h1 {
+  margin: 0px;
+  margin-top: 30px;
 }
 
 /* Arrow when hovered */
@@ -55,7 +60,6 @@
   cursor: pointer;
   width: 100%;
   height: 115px;
-
   /* scroll-animation when arrow dropdown appears */
   -webkit-animation-name: scrollingDown; /* Safari 4.0 - 8.0 */
   -webkit-animation-duration: 0.5s; /* Safari 4.0 - 8.0 */
@@ -63,7 +67,12 @@
   animation-duration: 0.5s;
 }
 
-.arrow.hovered p {
+.arrow-hovered-content {
+  padding-top: 20px;
+}
+
+.arrow.hovered .arrow-hovered-content{
+  margin: 0px;
   -webkit-animation: appearance 1s; /* Safari 4+ */
   -moz-animation:    appearance 1s; /* Fx 5+ */
   -o-animation:      appearance 1s; /* Opera 12+ */
@@ -99,4 +108,20 @@
 @keyframes appearance {
   0%   { opacity: 0; }
   100% { opacity: 1; }
+}
+
+/* adjustments when on mobile */
+@media (max-width: 790px) {
+  .arrow {
+    height: 100px;
+   }
+
+  .arrow.hovered {
+  margin-top: -50px;
+  }
+
+  .arrow h1 {
+    margin-top: 20px;
+  }
+  
 }
