feat(main-page-component): add first set-up component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,6 @@
 <p> Detail pagina component </p>
 <app-detail-persona></app-detail-persona> -->
 
-<!-- Persona pijl component -->
-<app-arrow-persona></app-arrow-persona>
-<app-arrow-persona></app-arrow-persona>
+<app-main-page></app-main-page>
 
 <router-outlet></router-outlet>
