--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,5 +1,6 @@
 <div class="heading">
-    Titel + subtitle + button naar vragenlijst
+    Titel + subtitle
+    <a routerLink="/question-component" routerLinkActive="active">Naar vragenlijst pagina</a>
 </div>
 
 <div class="persona-arrows">
