--- a/src/app/detail-persona/detail-persona.component.html
+++ b/src/app/detail-persona/detail-persona.component.html
@@ -1,3 +1,6 @@
 <p>
   detail-persona works!
 </p>
+<button class="btnPrimary" id="">
+  <a routerLink="/home" routerLinkActive="active">Naar home pagina</a>
+</button>
