--- a/src/app/questionaire/questionaire.component.html
+++ b/src/app/questionaire/questionaire.component.html
@@ -1,3 +1,6 @@
 <p>
   questionaire works!
 </p>
+<button class="btnPrimary" id="">
+  <a routerLink="/home" routerLinkActive="active">Naar home pagina</a>
+</button>
