--- a/src/app/arrow-persona/arrow-persona.component.html
+++ b/src/app/arrow-persona/arrow-persona.component.html
@@ -4,15 +4,14 @@
 <div class="arrow-container">
     <!-- Not hovered state -->
     <div class="arrow">
-        <h1>Titel</h1>
-        <p>subtext</p>
-        <p>subtext</p>
+        <h1>{{firstName}}</h1>
+        <p>{{lastName}}</p>
+        <p>{{sign}}</p>
     </div>
-  
     <!-- Hovered state -->
     <div class="arrow hovered">
         <div class="arrow-hovered-content">
-            <p>Arrow hovered<p>
+            <p>{{age}} jaar oud<p>
             <button class="btnPrimary" id="">
                 <a routerLink="/detail-component" routerLinkActive="active">Naar detail pagina</a>
             </button>
