--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,9 +1,11 @@
 <div class="heading">
     Titel + subtitle
-    <a routerLink="/question-component" routerLinkActive="active">Naar vragenlijst pagina</a>
+    <a routerLink="/detail-component" routerLinkActive="active">Naar Detail pagina</a>
 </div>
 
 <div class="persona-arrows">
+    <app-arrow-persona></app-arrow-persona>
+    <app-arrow-persona></app-arrow-persona>
     <app-arrow-persona></app-arrow-persona>
     <app-arrow-persona></app-arrow-persona>
 </div>
