--- a/src/app/questionaire/questionaire.component.html
+++ b/src/app/questionaire/questionaire.component.html
@@ -1,6 +1,7 @@
+<button class="btnPrimary" id="">
+  <a routerLink="/home" routerLinkActive="active">Go home</a>
+</button>
+
 <p>
   questionaire works!
 </p>
-<button class="btnPrimary" id="">
-  <a routerLink="/home" routerLinkActive="active">Naar home pagina</a>
-</button>
