--- a/src/app/arrow-persona/arrow-persona.component.html
+++ b/src/app/arrow-persona/arrow-persona.component.html
@@ -12,7 +12,7 @@
         <div class="arrow-hovered-content">
             <p>{{summary}}<p>
             <button class="btnPrimary" id="">
-                <a routerLink="/question-component" routerLinkActive="active">Do Quiz</a>
+                <a routerLink="{{linkQuiz}}" routerLinkActive="active">Do Quiz</a>
             </button>
         </div>  
     </div>
