--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -4,6 +4,7 @@
 </div>
 
 <div class="persona-arrows">
+    <!-- TODO for-loop obv toekomstige JSON met films -->
     <app-arrow-persona></app-arrow-persona>
     <app-arrow-persona></app-arrow-persona>
     <app-arrow-persona></app-arrow-persona>
